Changes in @NEW@:
  o Bug Fixes:
    * A bug causing python-setuptools to appear to be an excessive build
      requirement has been fixed. (CNY-2738)
    * A regression triggered when rMake recursed through a group recipe
      that added troves with a full version has been fixed. (CNY-2768)

Changes in 2.0.13:
  o Build Changes:
    * When cooked, factories can now package additional files in their
     :recipe component. (CNY-2748)
    * Moved VersionConflicts to pluggable policy and removed default
      exceptions. (CNY-2716)

  o Client Changes:
    * PGP Keyring location is no longer determined using $HOME, which
      is unreliable; a getpwuid(3) lookup is used instead. (CNY-2722)
    * The number of retries for providing a passphrase when signing
      troves changed from 3 to 5. (CNY-2709)

  o Code Changes:
    * Some incompatibilities with python2.5 have been removed.

  o Bug Fixes:
    * More optimizations for the pathId lookup query times for some
      package builds. (CNY-2742)
    * A bug that caused an InsufficientPermission error when a user
      only has repository access permissions added by trove calls
      getNewTroveList() has been fixed. (CNY-2755)
    * A bug that caused a request to add access to a trove for a role
      to be ignored if the same trove was used previously to grant
      access to a different role has been fixed. (CNY-2758)
    * A bug that caused an InsufficientPermission error when a user
      requests a changeset to which the user has been granted access
      with addTroveAccess has been fixed. (CNY-2760)
    * The XML writer in xmldata.py is now encoding using UTF-8.
      (CNY-2756)

Changes in 2.0.12:
  o Build Changes:
    * Conary now warns about some possibly unused build requirements.
      This requires conary-policy 1.0.16 or later. (CNY-2232)
    * Suggested additions to buildRequires lists are now separately
      encoded in the XML build log. (CNY-2621)